# CTransform

./: .gitmodules  CMakeLists.txt  Doxyfile  README.md  annotated.html  buffer_8h.html  buffer_8h__dep__incl.dot  buffer_8h__incl.dot  buffer_8h_source.html  classes.html  controller.c  controller.h  controller_8h.html  controller_8h__incl.dot  controller_8h_source.html  controller_test.c  dir_000001_000005.html  dir_000002_000005.html  dir_000003_000005.html  dir_000004_000005.html  dir_000006_000005.html  dir_000015_000001.html  dir_000015_000004.html  dir_000019_000005.html  dir_23ec12649285f9fabf3a6b7380226c28.html  dir_23ec12649285f9fabf3a6b7380226c28_dep.dot  dir_2857e0e3e730d863ac3f3500c7ce3b97.html  dir_289a9db7f5db18fcebe2284c66b05f94.html  dir_3f6157423b1e24fbbe29232d89e92d45.html  dir_44ea9ed243d3740341f2efeb45271ac4.html  dir_452bd50404506a625d95079c595f0138.html  dir_48909329bd999f2756b8cf9b0f3fd37c.html  dir_48909329bd999f2756b8cf9b0f3fd37c_dep.dot  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_53403d93963d3f5d2fcffd0698f5bddb.html  dir_53403d93963d3f5d2fcffd0698f5bddb_dep.dot  dir_630d0a2655be529a0fbdb7a18b0f9dde.html  dir_630d0a2655be529a0fbdb7a18b0f9dde_dep.dot  dir_63772b626f2709090f0bdca0f40827b4.html  dir_95e29a8b8ee7c54052c171a88bb95675.html  (+183 more)
buffer/: CMakeLists.txt  buffer.c  buffer.h  test.c
compress/: CMakeLists.txt  test.c  transformation_compress.c  transformation_compress.h  transformation_decompress.c  transformation_decompress.h
crypto/: CMakeLists.txt  mem_cleanse.c  mem_cleanse.h  test.c  transformation_decrypt.c  transformation_decrypt.h  transformation_encrypt.c  transformation_encrypt.h  transformation_hash.c  transformation_hash.h
encode/: CMakeLists.txt  test.c  transformation_b64_decode.c  transformation_b64_decode.h  transformation_b64_encode.c  transformation_b64_encode.h
examples/: compress_example.c  read_by_line_example.c  sink_derived_example.h  source_derived_example.h  transformation_derived_example.h  write_by_chunk_example.c
file/: CMakeLists.txt  sink_file.c  sink_file.h  source_file.c  source_file.h  test.c
read_write/: CMakeLists.txt  sink_getc.c  sink_getc.h  sink_gets.c  sink_gets.h  sink_read.c  sink_read.h  source_write.c  source_write.h  test.c
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
util/: CMakeLists.txt  test.c  transformation_remove.c  transformation_remove.h  transformation_replace.c  transformation_replace.h
